--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
-streamlit>=1.32,<1.37
-transformers>=4.41,<4.46
-torch>=2.1,<2.6
-sentencepiece>=0.1.99,<0.2
+streamlit==1.36.0
+transformers==4.41.2
+tokenizers==0.19.1
+huggingface_hub==0.23.4
+requests>=2.31.0
+sentencepiece==0.1.99
+safetensors==0.4.3
+openai>=1.30.0
+
+# PyTorch (CPU wheel)
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.1.2+cpu
