--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
 streamlit==1.36.0
 transformers==4.46.2
-tokenizers==0.21.0
+tokenizers==0.20.1
 huggingface_hub==0.26.2
 requests>=2.31.0
-safetensors==0.4.4
-sentencepiece==0.2.1
+safetensors>=0.4.4
 openai>=1.30.0
 
---extra-index-url https://download.pytorch.org/whl/cpu
-torch==2.7.1+cpu
+torch==2.7.1
