--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-streamlit==1.36.0
-transformers==4.46.2
-huggingface_hub==0.26.2
-requests>=2.31.0
-safetensors==0.4.4
-sentencepiece==0.2.1
-openai>=1.30.0
-torch==2.7.1
+streamlit
+torch>=2.1
+transformers>=4.41
+huggingface_hub>=0.24
+safetensors>=0.4.3
