--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit
-torch>=2.1
-transformers>=4.41
-huggingface_hub>=0.24
-safetensors>=0.4.3
-sentencepiece>=0.1.99
-openai>=1.40.0
+streamlit>=1.33.0
+transformers>=4.42.0
+torch>=2.1.0
+accelerate>=0.30.0
+huggingface_hub>=0.23.0
+sentencepiece
