--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-openai>=1.14.0
-huggingface_hub
-transformers
-torch
-sentencepiece
-streamlit
+streamlit>=1.38
+torch>=2.1,<3
+transformers>=4.44.2
+huggingface_hub>=0.23
+sentencepiece>=0.1.99
+openai>=1.42
